<resources>
    <string name="app_name">PAYPEE</string>
    <string name="app_color">#FFA000</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_dummy">PAY</string>
    <string name="spash_splash">PEE</string>
    <string name="title_activity_select_cat">SelectCat</string>
    <string name="further">For any other assistance please </string>
    <string name="clickhere">Click Here</string>
    <string name="dustbins">DUSTBINS</string>
    <string name="toilets">TOILETS</string>
    <string name="explore">&#160;&#160;Explore by locality, landmark...</string>
    <string name="dummylogo">PAYPEE</string>
    <string name="add_new">Add New</string>
    <string name="title_activity_search_locality">SearchLocality</string>
    <string name="title_activity_catalog_page">CatalogPage</string>
    <string name="title_activity_map_view">MapView</string>

    <string name="curr_loc">&#xe600;</string>
    <string name="add_dust">&#xe601;</string>
    <string name="back">&#xe602;</string>
    <string name="check">&#xe603;</string>
    <string name="cross">&#xe604;</string>
    <string name="sweep">&#xe605;</string>
    <string name="recy">&#xe606;</string>
    <string name="filter">&#xe607;</string>
    <string name="locat">&#xe608;</string>
    <string name="map">&#xe609;</string>
    <string name="rating">&#xe60a;</string>
    <string name="search">&#xe60b;</string>

    <string name="upload">&#xe60c;</string>
    <string name="take_photo">&#xe60d;</string>
    <string name="review">&#xe60e;</string>
</resources>
