<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="3dp"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/back_but"
            android:layout_width="30dp"
            android:padding="8dp"
            android:layout_height="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:padding="10dp"
            android:textColor="@color/splash_background"
            android:text="@string/dummylogo"
            android:textStyle="bold"
            android:layout_weight="1"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/toilet"
                android:text="@string/toilets"
                android:layout_width="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="10dp"
                android:layout_height="10dp"/>
            <TextView
                android:id="@+id/dustbin"
                android:text="@string/dustbins"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/grey"
                android:textSize="22sp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/search_icon"
                android:id="@+id/search_bar"
                android:padding="15dp"
                android:background="@android:drawable/editbox_background"
                android:editable="false"
                android:text="@string/explore"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#292729"
            android:textSize="16sp"
            android:text="@string/further"/>
        <View
            android:layout_width="10dp"
            android:layout_height="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/clickhere"
            android:textSize="15sp"
            android:textColor="#ffffff"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

</FrameLayout>