<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/catalog_bg"
    android:id="@+id/menu_content_frame2">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:gravity="center_vertical"
                    android:background="@color/splash_background"
                    android:orientation="horizontal" >
                    <com.app.manojapp.customcomponents.TextView_White
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/back"
                        android:textSize="25sp"
                        android:layout_marginLeft="10dp"
                        />
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:text="Dustbins and Toilets"
                        android:textStyle="bold"
                        android:layout_weight="1"/>

                    <com.app.manojapp.customcomponents.TextView_White
                        android:id="@+id/filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter"
                        android:textSize="30sp"
                        android:layout_marginLeft="10dp"
                        />
                    <com.app.manojapp.customcomponents.TextView_White
                        android:layout_width="wrap_content"
                        android:id="@+id/add_new"
                        android:layout_height="wrap_content"
                        android:text="@string/add_dust"
                        android:textSize="30sp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />
                </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ededed"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <com.app.manojapp.customcomponents.TextView_Appcolor
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/locat"/>
        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="Freedom Fighter Enclave, Delhi"
            android:ellipsize="marquee"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="#cccccc"/>
                <com.app.manojapp.customcomponents.PullAndLoadMore
                    android:id="@+id/catalog_list"
                    android:divider="@null"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent">

                </com.app.manojapp.customcomponents.PullAndLoadMore>
</LinearLayout>
    <FrameLayout
        android:layout_gravity="bottom|right"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle"/>
        <com.app.manojapp.customcomponents.TextView_Appcolor
            android:id="@+id/map_view"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/map"/>
    </FrameLayout>
</FrameLayout>