<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@android:drawable/editbox_background"
        android:orientation="horizontal" >
        <com.app.manojapp.customcomponents.TextView_Black
            android:id="@+id/back_but"
            android:layout_width="30dp"
            android:padding="8dp"
            android:text="@string/back"
            android:layout_height="30dp"/>
        <EditText
            android:id="@+id/search_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:padding="15dp"
            android:hint="Start Typing Location"
            android:layout_weight="1"/>
        <com.app.manojapp.customcomponents.TextView_Black
            android:id="@+id/cancel_search"
            android:layout_width="30dp"
            android:gravity="center"
            android:text="@string/cross"
            android:layout_height="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:padding="15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:drawable/editbox_background"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:id="@+id/use_curr_locat"
            android:gravity="center">
            <com.app.manojapp.customcomponents.TextView_Black
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/curr_loc"/>
            <TextView
                android:id="@+id/text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Use Current Location"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"/>
        </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#999"/>
        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            </ListView>
        </LinearLayout>
        </LinearLayout>
</LinearLayout>
