<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/frame_pic"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/pic"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#aaa"
            android:scaleType="fitXY" >
        </com.android.volley.toolbox.NetworkImageView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="#aa222222"
        android:padding="5dp"
        android:layout_gravity="right|top"
        android:orientation="horizontal">
        <com.app.manojapp.customcomponents.TextView_Appcolor
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/rating"/>
        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3.5"
            android:layout_marginLeft="8dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            />
    </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:id="@+id/nonframepic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/desc"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Description : Loading..."
            android:textSize="16sp"/>
        <fragment
            android:layout_marginTop="20dp"
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
        </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.app.manojapp.customcomponents.IconsLayout
            android:id="@+id/icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </com.app.manojapp.customcomponents.IconsLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="PHOTOS"/>
        <com.app.manojapp.customcomponents.ImagesLayout
            android:id="@+id/images_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.app.manojapp.customcomponents.ImagesLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="REVIEWS"/>
        <com.app.manojapp.customcomponents.ReviewLayout
            android:id="@+id/review_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.app.manojapp.customcomponents.ReviewLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
    </ScrollView>
    <com.app.manojapp.customcomponents.TextView_White
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="#44222222"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/back"/>
    <FrameLayout
        android:id="@+id/add_review"
        android:layout_gravity="bottom|right"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle"/>
        <com.app.manojapp.customcomponents.TextView_Appcolor
            android:id="@+id/map_view"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/review"/>
    </FrameLayout>
</FrameLayout>